--- a/sign.css
+++ b/sign.css
@@ -3,9 +3,28 @@ background-image: url('all.jpg');
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
+display: flex;
+flex-direction: column;
+ align-items: center;
+ justify-content: center;
+  min-height: 90vh;
 margin: 0;
 padding: 0;
 
+}
+.gender{
+font-size: medium;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+text-shadow: black;
+}
+
+.s{
+  width: 420px;
+  color: white;
+  border-radius: 12px;
+  padding: 30px 40px;
+  border: 2px solid rgba(225, 225, 225, .2);
+  backdrop-filter: blur(10px);
 
 }
 
