--- a/home_page/login/login.css
+++ b/home_page/login/login.css
@@ -40,7 +40,7 @@ body{
     border: 2px solid rgba(225, 225, 225, .2);
     border-radius: 40px;
     font-size: 16px;
-    color: black;
+    color: white;
     padding: 20px 45px 20px 20px;
 }
 .input-box input::placeholder{
