edded sign up bg

--- a/game page (haitham)/sign.css
+++ b/game page (haitham)/sign.css
@@ -1,5 +1,5 @@
 body{
-background-image: url('all.jpg');
+background-image: url('im6.jpg');
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
