--- a/12.css
+++ b/12.css
@@ -1,8 +1,15 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #050505; 
-    color: white;
+    margin: 0;
+    padding: 0;
+    background-image: url('geometric-rog-logo-black-and-red-gaming-7ujb6621bnmi5ydk.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    color: #f0f0f0;
+    font-family: 'Segoe UI', sans-serif;
+    text-shadow: 0 0 5px #ff0000, 0 0 10px #aa0000;
 }
+
 h1 {
     text-align: center;
     background-color: #1a0000;
@@ -10,24 +17,28 @@ h1 {
     text-transform: uppercase;
     letter-spacing: 2px;
 }
+
 table {
     width: 80%;
     margin: auto;
-    background-color: #0d0d0d; 
+    background-color: rgba(13, 13, 13, 0.5); 
     border-radius: 10px;
     overflow: hidden;
     border-collapse: collapse;
     box-shadow: 0 0 20px rgba(255, 0, 0, 0.2); 
 }
+
 th, td {
     padding: 15px;
     text-align: center;
     border-bottom: 1px solid #800000;
 }
+
 th {
-    background-color: #1a0000;
+    background-color: rgba(26, 0, 0, 0.6); 
     color: #ff1a1a;
 }
+
 button {
     cursor: pointer;
     padding: 8px 12px;
@@ -36,20 +47,25 @@ button {
     transition: 0.3s;
     font-weight: bold;
 }
+
 .delete-btn {
     background-color: #990000; 
     color: white;
 }
+
 .delete-btn:hover {
     background-color: #ff0000;
 }
+
 .buy-btn {
-    background-color: #660000; 
+    background-color:#034d03; 
     color: white;
 }
+
 .buy-btn:hover {
-    background-color: #cc0000;
+    background-color: #05e605;
 }
+
 .total-price {
     text-align: center;
     font-size: 22px;
@@ -61,6 +77,7 @@ button {
     font-weight: bold;
     box-shadow: 0 0 20px rgba(255, 0, 0, 0.3);
 }
+
 tr:hover {
-    background-color: #220000;
+    background-color: rgba(97, 5, 209, 0.4); 
 }
