--- a/game page (haitham)/sign.css
+++ b/game page (haitham)/sign.css
@@ -15,7 +15,7 @@ padding: 0;
 .gender{
 font-size: medium;
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-text-shadow: black;
+text-shadow: 2px 2px 5px black;
 }
 
 .s{
