--- a/game page (haitham)/game.css
+++ b/game page (haitham)/game.css
@@ -57,7 +57,26 @@ body {
     text-shadow: 0 0 10px rgba(255, 69, 0, 0.7);  
 }
 
-
+.auth-links {
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    margin-right: 50px;
+  }
+  
+  .auth-links a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s ease-in-out, transform 0.2s ease-in-out;
+  }
+  
+  .auth-links a:hover {
+    color: #ff4500;
+    transform: scale(1.1);
+    text-shadow: 0 0 10px rgba(255, 69, 0, 0.7);
+  }
+  
 
 
 .container {
@@ -120,8 +139,26 @@ body {
 }
 
 .footer-links a:hover {
-    color: black;
+    color: rgb(201, 11, 11);
     text-decoration: none;
     font-weight: bold;
     padding: 10px;
+}
+.footer-button {
+    background-color: #8b0000;
+    color: white;
+    font-weight: bold;
+    border: none;
+    border-radius: 8px;
+    padding: 10px 20px;
+    margin: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.footer-button:hover {
+    background-color: #b22222;
+    color: #fff;
+    transform: scale(1.05);
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
 }
