--- a/game page (haitham)/game.css
+++ b/game page (haitham)/game.css
@@ -24,7 +24,7 @@ transform: scale(2.1);
 
 
 body {
-
+      background-color: #000000;
         height: 100vh;
         margin: 0;
         font-family: Arial, sans-serif;
