--- a/Shopping_Cart (M)/payment.css
+++ b/Shopping_Cart (M)/payment.css
@@ -1,19 +1,22 @@
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #000000;
-        }
+body {
+    background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20240610/pngtree-computer-gaming-joystick-gaming-concept-game-controller-image_15745994.jpg'); 
+    background-size: cover;
+    background-position: center;
+    font-family: Arial, sans-serif;
+}
+form {
+    max-width: 500px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.2); 
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    width: 50%;
+    border-collapse: collapse;
 
-        form {
-            max-width: 500px;
-            margin: 50px auto;
-            padding: 20px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-collapse: collapse;
-            overflow: hidden;
+}
 
-        }
 
         label {
             font-weight: bold;
@@ -32,7 +35,7 @@
         }
 
         .btn {
-            background-color: green;
+            background-color:black;
             color: white;
             padding: 10px 20px;
             border: none;
@@ -41,4 +44,7 @@
             width: 100%;
             font-size: 16px;
             border-radius: 5px;
+        }
+        .btn:hover{
+            background-color: rgb(40, 40, 40);
         }
