--- a/game page (haitham)/game.css
+++ b/game page (haitham)/game.css
@@ -1,3 +1,12 @@
+ body {
+      background-color:#000000;
+        height: 100vh;
+        margin: 0;
+        font-family: Arial, sans-serif;
+        padding: 0;
+    }
+ 
+ 
  .a1{
    color: black;
    background: linear-gradient(to right,#ff4500,black);
@@ -20,15 +29,6 @@ transform: scale(2.1);
 
 
 
-}
-
-
-body {
-      background-color: #000000;
-        height: 100vh;
-        margin: 0;
-        font-family: Arial, sans-serif;
-        padding: 0;
 }
 
 
@@ -128,7 +128,6 @@ body {
     margin-top: 20px;
     border-radius: 10px;
     border-top: 2px 
-    color(white)
 }
 
 
@@ -159,7 +158,7 @@ body {
 
 .footer-button:hover {
     background-color: #b22222;
-    color: #fff;
+    color:white;
     transform: scale(1.05);
     box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
 }
